Add Phase 2 financial tests: reports, accounts, journals (24 tests)
FinancialReportsServiceTest (5 tests):
- P&L report, balance sheet, cash flow, COGS report
- Zero revenue produces zero profit

PurchaseOrderServiceTest (6 tests):
- Create PO, get by ID (found/not found), approve, filter by restaurant/unpaid

AccountServiceTest (6 tests):
- Create, get by ID (found/not found), get by restaurant/type, soft delete

JournalServiceTest (4 tests):
- Create journal entry with transactions
- Get entries by restaurant, date range, account

RevenueRecordingServiceTest (3 tests):
- Async recording success, synchronous returns true, failure sends alert

Total test suite: 480 tests

https://claude.ai/code/session_018JU2u9yY5Rk3aoje7Lq2kD